Commit for version 2.7